[package]
name = "gen-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "1"
table-extract="0.2.2"
substring ="1.4.5"
simple_excel_writer="0.2.0"
rand="0.8.5"
xml-rs="0.8.0"
anyhow = "1.0"

[dev-dependencies]
anyhow = "1.0"
